@@ -4,6 +4,7 @@ Add option to make your own font small
 Separate changing nickname and password
 Use PHPs native timezones
 Add message asking for manual refresh, when it stopped working
+Add personal notes
 
 Version 1.22.1 - Nov. 13, 2016
 Performance optimizations
